--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>21 Savage Fans</title>
+  <title>Calculator</title>
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>21 Savage</h1>
-  <h2>Why you trappin so hard?</h2>
+  <h1>Calculate</h1>
+  <!-- <h2>Why you trappin so hard?</h2> -->
+
+      <header>
+				<input id="userinput1" type="text" value="">
+				<input id="userinput2" type="text" value="">
+			</header>
+			<section>
+				<button id="sub" type="button">-</button>
+				<button id="add" type="button">+</button>
+				<button id="multi" type="button">*</button>
+				<button id="divide" type="button">/</button>
+			</section>
 
 
   <h3>Messages</h3>
